[gd_scene load_steps=52 format=3 uid="uid://cansb3kwm4xd6"]

[ext_resource type="Script" path="res://src/objects/orange_boss/orange_boss.gd" id="1_brcbv"]
[ext_resource type="Script" path="res://src/custom_nodes/StateMachine/state_overhead.gd" id="2_a8ifs"]
[ext_resource type="AudioStream" uid="uid://dt4cn6de4e6ki" path="res://asset/sounds/spike/spikes_pushing_through_floor.wav" id="2_k58rs"]
[ext_resource type="Script" path="res://src/objects/orange_boss/danger_mod.gd" id="2_xsstn"]
[ext_resource type="Script" path="res://src/custom_nodes/StateMachine/state_machine.gd" id="3_kgcvr"]
[ext_resource type="AudioStream" uid="uid://xsrqtwybr6ju" path="res://asset/sounds/Blast_Windup/boss_windup.wav" id="3_smq58"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/idle.gd" id="4_3k416"]
[ext_resource type="AudioStream" uid="uid://b13cstqr0nbvy" path="res://asset/sounds/explotion/Explosion_part_1.wav" id="4_7drxq"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/attack1.gd" id="4_741wx"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/attack2.gd" id="5_7pwj7"]
[ext_resource type="Texture2D" uid="uid://0ere47fb6b7k" path="res://asset/sprites/orange_boss/Orange_Boss_sprites.png" id="5_cuoyn"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/transition.gd" id="5_mdkg1"]
[ext_resource type="PackedScene" uid="uid://cy6wdj1eolk4p" path="res://src/custom_nodes/emiter/emitter.tscn" id="5_tk14x"]
[ext_resource type="AudioStream" uid="uid://b66gmp57psrde" path="res://asset/sounds/Boss_ded_sound/boss_death.wav" id="5_xsmle"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/cutscene_start.gd" id="6_2f88d"]
[ext_resource type="AudioStream" uid="uid://cgspvutpjqx2x" path="res://asset/sounds/footsteps/normal/Step_1.wav" id="6_lyv0j"]
[ext_resource type="AudioStream" uid="uid://da336o6tr4svl" path="res://asset/sounds/Mega_Danger/MEGA_DAMAGE_1.wav" id="6_x3eo4"]
[ext_resource type="AudioStream" uid="uid://brw7o5hum2uar" path="res://asset/sounds/Mega_Danger/MEGA_DAMAGE_2.wav" id="7_eqm68"]
[ext_resource type="AudioStream" uid="uid://c1b0fyy8h1r2r" path="res://asset/sounds/footsteps/normal/Step_2.wav" id="7_hmtux"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/fall.gd" id="7_sykwk"]
[ext_resource type="AudioStream" uid="uid://dsh7reb1g5uu3" path="res://asset/sounds/footsteps/normal/Step_3.wav" id="8_01br1"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/spawn.gd" id="8_e0t03"]
[ext_resource type="AudioStream" uid="uid://rsjrv7sgod45" path="res://asset/sounds/Mega_Danger/MEGA_DAMAGE_3.wav" id="8_shvau"]
[ext_resource type="AudioStream" uid="uid://dgdxthu8la62s" path="res://asset/sounds/Mega_Danger/MEGA_DAMAGE_4.wav" id="9_1rkfi"]
[ext_resource type="AudioStream" uid="uid://cbldksxouwajx" path="res://asset/sounds/footsteps/normal/Step_4.wav" id="9_4dgqb"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/jump.gd" id="9_ok8go"]
[ext_resource type="AudioStream" uid="uid://b25etkiidemsq" path="res://asset/sounds/Mega_Danger/MEGA_DAMAGE_5.wav" id="10_kwnyj"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/walk.gd" id="11_umr6x"]
[ext_resource type="Script" path="res://src/objects/orange_boss/ded_fall.gd" id="23_islxo"]
[ext_resource type="Script" path="res://src/objects/orange_boss/states/ded.gd" id="28_426bb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0o1hg"]
radius = 9.0
height = 56.0

[sub_resource type="Curve" id="Curve_s3ivw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.666925), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_obr67"]
offsets = PackedFloat32Array(0, 0.334884, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_81s3b"]
offsets = PackedFloat32Array(0, 0.394958, 0.672269, 1)
colors = PackedColorArray(1, 0, 0, 0.784314, 1, 1, 0, 0.784314, 1, 1, 0, 0.784314, 1, 1, 0, 0)

[sub_resource type="Curve" id="Curve_r25u3"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 91.118), 0.0, 0.0, 0, 0, Vector2(1, -46.9565), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_smvj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [70]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/JumpParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/PunchParticle:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hbmhq"]
resource_name = "attack1"
length = 2.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.3, 1.4, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("danger_mod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.8, 1.95),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [0.4],
"method": &"show_danger_shape"
}, {
"args": [0.2],
"method": &"active_danger"
}, {
"args": [0.6],
"method": &"hide_danger_shape"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Windup")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"blast_particle"
}]
}

[sub_resource type="Animation" id="Animation_b4wnr"]
resource_name = "attack1_hold"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [81, 82]
}

[sub_resource type="Animation" id="Animation_akebi"]
resource_name = "attack2"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [83, 84, 85, 86, 85, 86, 85, 87, 88, 89]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 0.85),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"cam_shake"
}, {
"args": [],
"method": &"activate_spikes"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Punch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/PunchParticle:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a0emh"]
resource_name = "fall"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [93, 94, 95]
}

[sub_resource type="Animation" id="Animation_no4yv"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [70, 71, 72, 73]
}

[sub_resource type="Animation" id="Animation_3wdpd"]
resource_name = "intro"
length = 3.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_intro"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_oqf3b"]
resource_name = "jump"
length = 0.6
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 91, 92, 93, 94, 95, 94]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/JumpParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vmyo7"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y3tck"]
resource_name = "ded"
length = 8.0
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25, 2.375, 2.5, 2.625, 2.75, 2.875, 3, 3.125, 3.25, 3.375, 3.5, 3.625, 3.75, 3.875, 4, 4.125, 4.25, 4.375, 4.5, 4.625, 4.75, 4.875, 5, 5.125, 5.25, 5.375, 5.5, 5.625, 5.75, 5.875, 6, 6.125, 6.25, 6.375, 6.5, 6.625, 6.75, 6.875, 7, 7.125, 7.25, 7.375, 7.5, 7.625, 7.75, 7.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 69]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ded_sound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(7.875),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngoxy"]
_data = {
"RESET": SubResource("Animation_smvj2"),
"attack1": SubResource("Animation_hbmhq"),
"attack1_hold": SubResource("Animation_b4wnr"),
"attack2": SubResource("Animation_akebi"),
"ded": SubResource("Animation_y3tck"),
"fall": SubResource("Animation_a0emh"),
"idle": SubResource("Animation_no4yv"),
"intro": SubResource("Animation_3wdpd"),
"jump": SubResource("Animation_oqf3b"),
"walk": SubResource("Animation_vmyo7")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cg0e"]
radius = 30.0
height = 83.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tos10"]
size = Vector2(48, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yyt0s"]
radius = 13.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_awtqh"]
radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gil3"]
size = Vector2(44, 0.1)

[node name="OrangeBoss" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_brcbv")

[node name="Punch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k58rs")
volume_db = -10.0
pitch_scale = 4.0

[node name="Windup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_smq58")
volume_db = -10.0

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7drxq")
volume_db = -10.0
pitch_scale = 2.0

[node name="Ded_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xsmle")
volume_db = -10.0
pitch_scale = 0.9

[node name="Intro" parent="." instance=ExtResource("5_tk14x")]
position = Vector2(0, -5.5)
max_distance = 5000.0
attenuation = 0.00257717
audios = Array[AudioStream]([ExtResource("6_x3eo4"), ExtResource("7_eqm68"), ExtResource("8_shvau"), ExtResource("9_1rkfi"), ExtResource("10_kwnyj")])

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -55)
texture = ExtResource("5_cuoyn")
hframes = 10
vframes = 10
frame = 70

[node name="ground_punch" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 49.5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/ground_punch"]
position = Vector2(12, -22.5)
rotation = 0.296706
shape = SubResource("CapsuleShape2D_0o1hg")

[node name="PunchParticle" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 49.5)
emitting = false
amount = 20
lifetime = 1.5
one_shot = true
explosiveness = 1.0
emission_shape = 5
emission_points = PackedVector2Array(-5, 0, 5, 0)
emission_normals = PackedVector2Array(-1, -2, 1, -2)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 25.0
gravity = Vector2(0, 220)
initial_velocity_min = 50.0
initial_velocity_max = 80.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
orbit_velocity_min = -0.01
orbit_velocity_max = 0.01
linear_accel_min = -200.0
linear_accel_max = -200.0
radial_accel_min = -10.0
radial_accel_max = 10.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 3.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_s3ivw")
color = Color(0.588235, 0.588235, 0.588235, 1)
color_ramp = SubResource("Gradient_obr67")

[node name="BlastParticle_3" type="CPUParticles2D" parent="Sprite2D"]
z_index = 1
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.2
emission_shape = 5
emission_points = PackedVector2Array(0, 0)
emission_normals = PackedVector2Array(0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 170.0
gravity = Vector2(0, 100)
initial_velocity_min = 700.0
initial_velocity_max = 1500.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
orbit_velocity_min = -0.03
orbit_velocity_max = 0.03
linear_accel_min = -5000.0
linear_accel_max = -3500.0
radial_accel_min = -10.0
radial_accel_max = 10.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_81s3b")

[node name="BlastParticle_2" type="CPUParticles2D" parent="Sprite2D"]
z_index = 1
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.2
emission_shape = 5
emission_points = PackedVector2Array(0, 0)
emission_normals = PackedVector2Array(0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 170.0
gravity = Vector2(0, 100)
initial_velocity_min = 600.0
initial_velocity_max = 1200.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
orbit_velocity_min = -0.03
orbit_velocity_max = 0.03
linear_accel_min = -5000.0
linear_accel_max = -4000.0
radial_accel_min = -10.0
radial_accel_max = 10.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_81s3b")

[node name="BlastParticle_1" type="CPUParticles2D" parent="Sprite2D"]
z_index = 1
emitting = false
amount = 50
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.2
emission_shape = 5
emission_points = PackedVector2Array(0, 0)
emission_normals = PackedVector2Array(0, -1)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 170.0
gravity = Vector2(0, 100)
initial_velocity_min = 350.0
initial_velocity_max = 800.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
orbit_velocity_min = -0.03
orbit_velocity_max = 0.03
linear_accel_min = -3500.0
linear_accel_max = -2500.0
radial_accel_min = -10.0
radial_accel_max = 10.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_81s3b")

[node name="land_emitter" parent="Sprite2D" node_paths=PackedStringArray("_particles") instance=ExtResource("5_tk14x")]
position = Vector2(0, 49.5)
volume_db = -10.0
pitch_scale = 0.5
attenuation = 0.258817
_particles = NodePath("../LandParticles")
audios = Array[AudioStream]([ExtResource("6_lyv0j"), ExtResource("7_hmtux"), ExtResource("8_01br1"), ExtResource("9_4dgqb")])

[node name="LandParticles" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 49.5)
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
emission_shape = 5
emission_points = PackedVector2Array(-5, 0, 5, 0)
emission_normals = PackedVector2Array(-1, -0.5, 1, -0.5)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 25.0
gravity = Vector2(0, 400)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
linear_accel_min = -1000.0
linear_accel_max = -1000.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 3.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_s3ivw")
color = Color(0.588235, 0.588235, 0.588235, 1)
color_ramp = SubResource("Gradient_obr67")

[node name="JumpParticles" type="CPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 49.5)
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
emission_shape = 5
emission_points = PackedVector2Array(-5, 0, 5, 0)
emission_normals = PackedVector2Array(-4, -3, 4, -3)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 25.0
gravity = Vector2(0, 500)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
angular_velocity_max = 100.0
orbit_velocity_min = -0.05
orbit_velocity_max = 0.05
linear_accel_min = -700.0
linear_accel_max = -700.0
radial_accel_max = 300.0
damping_min = 100.0
damping_max = 100.0
angle_min = -90.0
angle_max = 90.0
angle_curve = SubResource("Curve_r25u3")
scale_amount_min = 4.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_s3ivw")
color = Color(0.588235, 0.588235, 0.588235, 1)
color_ramp = SubResource("Gradient_obr67")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ngoxy")
}
autoplay = "idle"

[node name="StateOverhead" type="Node" parent="." node_paths=PackedStringArray("_actor", "_animationPlayer")]
script = ExtResource("2_a8ifs")
_usesActor = true
_actor = NodePath("..")
_usesAnimationPlayer = true
_animationPlayer = NodePath("../AnimationPlayer")

[node name="StateMachine" type="Node" parent="StateOverhead" node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_kgcvr")
_name_id = "main"
starting_state = NodePath("cutscene_start")

[node name="attack1" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("4_741wx")
transition = NodePath("../transition")

[node name="attack2" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("5_7pwj7")
transition = NodePath("../transition")

[node name="cutscene_start" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("6_2f88d")
transition = NodePath("../transition")

[node name="ded" type="Node" parent="StateOverhead/StateMachine"]
script = ExtResource("28_426bb")

[node name="ded_fall" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("ded")]
script = ExtResource("23_islxo")
ded = NodePath("../ded")

[node name="fall" type="Node" parent="StateOverhead/StateMachine"]
script = ExtResource("7_sykwk")

[node name="idle" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("4_3k416")
transition = NodePath("../transition")

[node name="jump" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("9_ok8go")
transition = NodePath("../transition")

[node name="spawn" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("transition")]
script = ExtResource("8_e0t03")
transition = NodePath("../transition")

[node name="transition" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("attack1", "attack2", "idle", "jump", "spawn", "walk")]
script = ExtResource("5_mdkg1")
attack1 = NodePath("../attack1")
attack2 = NodePath("../attack2")
idle = NodePath("../idle")
jump = NodePath("../jump")
spawn = NodePath("../spawn")
walk = NodePath("../walk")

[node name="walk" type="Node" parent="StateOverhead/StateMachine" node_paths=PackedStringArray("fall", "transition")]
script = ExtResource("11_umr6x")
fall = NodePath("../fall")
transition = NodePath("../transition")

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2(0, -41.5)
shape = SubResource("CapsuleShape2D_4cg0e")

[node name="body2" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_tos10")

[node name="shoulder" type="CollisionShape2D" parent="."]
position = Vector2(28, -48)
shape = SubResource("CapsuleShape2D_yyt0s")

[node name="danger_mod" type="Area2D" parent="."]
show_behind_parent = true
z_index = -1
position = Vector2(0, -52)
collision_layer = 0
collision_mask = 6
script = ExtResource("2_xsstn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="danger_mod"]
shape = SubResource("CircleShape2D_awtqh")

[node name="floor_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor_detect"]
modulate = Color(0, 1, 0, 1)
shape = SubResource("RectangleShape2D_4gil3")

[node name="find_ground" type="RayCast2D" parent="."]
position = Vector2(-2, -0.5)
target_position = Vector2(0, 2)
collision_mask = 17
hit_from_inside = true
